@@ -85,13 +85,13 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.2</version>
+            <version>2.0.10</version>
         </dependency>
 
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>2.0.7</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.7</version>
         </dependency>
 
 
@@ -111,24 +111,24 @@
             <groupId>net.jthink</groupId>
             <artifactId>jaudiotagger</artifactId>
             <version>3.0.2</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/libs/jaudiotagger-3.0.2.jar</systemPath>
+           <!-- <scope>system</scope>
+            <systemPath>${basedir}/libs/jaudiotagger-3.0.2.jar</systemPath>-->
         </dependency>
 
         <dependency>
             <groupId>com.jianggujin</groupId>
             <artifactId>JRegistry</artifactId>
             <version>1.1.0</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/libs/JRegistry-1.1.0.jar</systemPath>
+       <!--     <scope>system</scope>
+            <systemPath>${basedir}/libs/JRegistry-1.1.0.jar</systemPath>-->
         </dependency>
 
         <dependency>
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
             <version>0.4.20</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/libs/thumbnailator-0.4.20.jar</systemPath>
+    <!--        <scope>system</scope>
+            <systemPath>${basedir}/libs/thumbnailator-0.4.20.jar</systemPath>-->
         </dependency>
 
         <dependency>
@@ -211,6 +211,10 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <options>
+                                <option>-Dfile.encoding=utf-8</option>
+                                <option>-XX:+UseZGC</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
